@@ -1,4 +1,4 @@
-# $Id: sample-ngircd.conf,v 1.38 2006/11/05 13:03:47 fw Exp $
+# $Id: sample-ngircd.conf,v 1.39 2006/12/29 14:09:48 fw Exp $
 
 #
 # This is a sample configuration file for the ngIRCd, which must be adepted
@@ -178,7 +178,13 @@
 	;Topic = a great topic
 
 	# Initial channel modes
-	;Modes = tn
+	;Modes = tnk
+
+	# initial channel password (mode k)
+	;Key = Secret
+
+	# maximum users per channel (mode l)
+	;MaxUsers = 23
 
 [Channel]
 	# More [Channel] sections, if you like ...
